fix aside1 y overflow

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -16,6 +16,7 @@ body, html {
   padding-left: 0px;
   padding-right: 0px;
   text-align: center;
+  overflow-y: auto;
 }
 .aside1 > .nav > li > a {
   padding-left: 0px;
